# c-labs

./: .gitignore  README.md
.github/workflows/: common.yml
lab1/: CMakeLists.txt  README.md  main.c  sfractional.c  sfractional.h
lab1/input validation/: smartinput.c  smartinput.h
lab2/: README.md
lab2/lab 2.1/: CMakeLists.txt  main.c  order_control.c  order_control.h
lab2/lab 2.1/input validation/: smartinput.c
lab2/lab 2.2/: CMakeLists.txt  custom_function_calc.c  custom_function_calc.h  main.c
lab3/: CMakeLists.txt  README.md  cube.c  cube.h  input.txt  main.c
lab4/: README.md
lab4/lab 4.1/: CMakeLists.txt  README.md  main.c  string_functions.c  string_functions.h
lab4/lab 4.2/: text_analyzer.c  text_analyzer.h
lab4/lab4.2/: CMakeLists.txt  main.c  text.txt  text_analyzer.c
lab5/: README.md
lab5/include/: defines.h
lab5/lab 5.1/: Makefile  defines.h  main.c
lab5/lab 5.1/include/: military_commissariat.h  queue.h
lab5/lab 5.1/military сommissariat/: conscript.c  conscript.h  military_commissariat.c  military_commissariat.h
lab5/lab 5.1/queue/: queue.c  queue.h
lab5/lab 5.1/src/: conscript.c  main.c  military_commissariat.c  queue.c
lab5/lab 5.2/: CMakeLists.txt  Makefile  main.c
lab5/lab 5.2/binary search tree/: tree.c  tree.h
lab5/lab 5.2/include/: list.h  stack.h  tree.h
lab6/: README.md
lab6/include/: defines.h
lab6/src/: list.c  tree.c
lab7/: Makefile
lab7/include/: control.h  list.h  project.h  resource.h  task.h
lab7/src/: control.c  list.c  main.c  project.c  resource.c  smartinput.c  task.c
(+6 files in other folders)
